# Perun

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.cpp
src/engine/board/: board_repr.cpp  board_repr.h  move_gen.cpp  move_make.cpp
src/engine/evaluation/: evaluation.cpp  evaluation.h
src/engine/interface/: engine.cpp  engine.h  game.cpp  game.h  interface.cpp  interface.h  perun.cpp  uci.cpp  usage.md
src/engine/search/: game.cpp  game.h  ordering.cpp  ordering.h  search.cpp  search.h
src/engine/tt/: tt.cpp  tt.h
src/engine/utils/: attack_tables.cpp  attack_tables.h  attack_tables_gen.cpp  attack_tables_gen.h  board_repr.h  piece_types.h
src/engine/utils/attack_tables/: attack_tables.h  attack_tables_data.h  attack_tables_data_bishop.h  attack_tables_data_bishop_pin.h  attack_tables_data_rook.h  attack_tables_data_rook_pin.h  attack_tables_gen.cpp  attack_tables_gen.h
src/engine/utils/common/: bit_opers.cpp  bit_opers.h  includes.h  types.h
src/engine/utils/perft/: perft.cpp  perft.h
